# basinix

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  shell.nix
.github/workflows/: rust.yml
evaluator/: Cargo.toml  find-drvs-from-previous-commit.sh  outpaths.nix
evaluator/src/: lib.rs  main.rs  pull_request.rs
server/: Cargo.toml
server/migrations/2021-01-28-042303_create_projects/: down.sql  up.sql
server/src/: build_manager.rs  cli.rs  github-producer.rs  github_producer.rs  main.rs  models.rs  schema.rs
server/src/src/: schema.rs
shared/: Cargo.toml
shared/src/: db.rs  error.rs  eval_events.rs  gh_events.rs  github.rs  lib.rs  outpaths.nix  types.rs
shared/src/db/: diesel.toml  models.rs
shared/src/db/sql/: down.sql  up.sql
shared/src/github/: pull_request.rs  repo_events.rs
shared/src/src/: schema.rs
web/elm/: .gitignore  LICENSE  README.md
worker/: Cargo.toml
worker/src/: main.rs
