[package]
name = "basinix_evaluator"
version = "0.1.0"
authors = ["Jonathan Ringer <jonringer117@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "^1.3"
log = "0.4"
chrono = "0.4"
env_logger = "0.8"
basinix_shared = { path = "../shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { workspace = true }
tokio = { version = "1.0", features = ["process"] }

[lib]
name = "basinix_evaluator"
path = "src/lib.rs"

[[bin]]
name = "basinix_evaluator_runner"
path = "src/main.rs"