[package]
name = "basinix-server"
version = "0.1.0"
authors = ["Jonathan Ringer <jonringer117@gmail.com>"]
edition = "2018"
description = "Continuous Integration Server for nixpkgs"
repository = "https://github.com/jonringer/basinix"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
