[package]
name = "basinix-shared"
version = "0.1.0"
authors = [
  "Jonathan Ringer <jonringer117@gmail.com>",
  ]
edition = "2018"
description = "Shared dependencies between the server and workers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
