[package]
name = "basinix_shared"
version = "0.1.0"
authors = [
  "Jonathan Ringer <jonringer117@gmail.com>",
  ]
edition = "2018"
description = "Shared dependencies between the server and workers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = [ "sqlite", "runtime-tokio-rustls" ] }
lazy_static = "^0.1"
dirs = "^3.0"
